index.html is done

--- a/code/index.html
+++ b/code/index.html
@@ -17,7 +17,7 @@
         <a href="#News" class="nav-page-link">News</a>
         <a href="#Merchandise" class="nav-page-link">Merchandise</a>
         <a href="#Information" class="nav-page-link">Information</a>
-        <a href="#Which-Sailor-Are-You?" class="nav-page-link">Which Sailor are you?</a>
+        <a href="#Which-Sailor-Are-You?" class="nav-page-link">Which character are you?</a>
         <a href="#About-Us" class="nav-page-link">About us</a>
       </nav>
     </header>
@@ -25,17 +25,70 @@
     <article class="grid">
      <section class="grid-col-2">
       <div class="grid-item-lg">
-        <img src="https://www.themarysue.com/which-sailor-moon-incarnation-is-right-for-you/" class="grid-item-img">
-        <p class="grid-item-category">Pretty Guardian Sailor Moon</p>
-        <h4 class="grid-item-title">Pretty Guardian Sailor Moon Cosmos The Movie - 2 Part Film Summer 2023 The Sailor Moon 30th Anniversary Special Program</h4>
+        <img src="../moon.cafe.jpg" class="grid-item-img" alt="moon-cafe">
+        <p class="grid-item-category">News</p>
+        <h4 class="grid-item-title">Sailor Moon Crystal Shop & Cafe (Taiwan)</h4>
         <p class="grid-item-author">By Fan Network</p>
       </div>
 
+      <div>
+        <h3 class="grid-col-title">Sailor Moon Movies</h3>
+        <div class="grid-item-sm">
+          <div>
+            <p class="grid-item-category">Information</p>
+            <h4 class="grid-item-title">Moonies in the viewable area will rejoice! You can now watch all 3 Sailor Moon movies for free on Youtube.</h4>
+            <p class="grid-item-author">By Fan Network</p>
+          </div>
+          <div>
+            <img src="../movie.moon.jpg" class="grid-item-img" alt="moon-movie">
+          </div>
+        </div>
+
+        <div class="grid-item-sm">
+          <div>
+          <p class="grid-item-category">News</p>
+          <h4 class="grid-item-title">Pretty Guardian Sailor Moon Cosmos The Movie - 2 Part Film Summer 2023 The Sailor Moon 30th Anniversary Special Program</h4>
+          <p class="grid-item-author">By Fan Network</p>
+          </div>
+          <div>
+          <img src="../moon-30.jpeg" class="grid-item-img" alt="moon-30th">
+          </div>
+        </div>
+
+        <div class="grid-item-form">
+          <h4 class="form-title">Sign up for our Newsletter for Sailors</h4>
+          <div class="form-fields">
+          <input type="email" class="form-input" placeholder="Email address">
+          <input type="submit" value="Sign up" class="form-submit">
+            <div>
+        </div>
+      </div>
      </section>
 
-     <section class="">
-      <!-- The other news  -->
-     </section>
-   </article>
+     <h3 class="grid-col-title">Things you need to know and have!</h3>
+     <section class="grid-col-3">
+      <div class="grid-item-md">
+        <img src="../moon.store.jpg" class="grid-item-img" alt="moon-store">
+        <p class="grid-item-category">Merchandise</p>
+          <h4 class="grid-item-title">New Sailor Moon Store Petit in Osaka, Japan! 🎀🌙</h4>
+          <p class="grid-item-author">By Fan Network</p>
+      </div>
+      
+      <div class="grid-item-md">
+        <img src="../moon-character.jpg" class="grid-item-img" alt="moon-character">
+        <p class="grid-item-category">Which Sailor Are You?</p>
+          <h4 class="grid-item-title">Are you an outgoing person like Sailor Moon? Or are you smart like Sailor Mercury?</h4>
+          <p class="grid-item-author">By Fan Network</p>
+      </div>
+      
+      <div class="grid-item-md">
+        <img src="../moon.backpack.jpg" class="grid-item-img" alt="moon-backpack">
+        <p class="grid-item-category">Merchandise</p>
+          <h4 class="grid-item-title">BoxLunch: Sailor Guardians and Black Moon Clan Reversible Mini Backpack</h4>
+          <p class="grid-item-author">By Fan Network</p>
+      </div>
+
+      </section>
+    </article>
   </body>
 </html>
