started styling the grid for other-news and added a folder with some images

--- a/code/index.html
+++ b/code/index.html
@@ -43,8 +43,7 @@
       <div class="big-news-imagebox">
         <img
           class="big-news-image"
-          src="https://images.pexels.com/photos/796583/pexels-photo-796583.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-          alt=""
+          src="images/big-news-image.jpg" alt=""
         />
       </div>
 
@@ -63,11 +62,12 @@
     <!-- Other news content -->
     <section class="other-news-grid">
       <article class="other-news other-news-1">
-        <img src="" alt="" />
+        <img class="other-news-image" src="images/other-news-image-1.jpg" alt="person writing in a notepad" />
 
         <div class="other-news-textbox">
           <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
           <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more...</a>
         </div>
       </article>
 
