styled other news section for mobile

--- a/code/index.html
+++ b/code/index.html
@@ -43,14 +43,15 @@
       <div class="big-news-imagebox">
         <img
           class="big-news-image"
-          src="images/big-news-image.jpg" alt=""
+          src="/images/big-news-image.jpg" alt=""
         />
       </div>
 
       <div class="big-news-text">
         <h1 class="big-news-heading">
-          How to Quit Your Day Job and Focus on Lorem Ipsum
+          How to Quit Your Day Job and Focus 
         </h1>
+        <h1 class="big-news-heading">on Lorem Ipsum</h1>
         <p class="big-news-p">
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
           officia deserunt mollit anim id est laborum.
@@ -62,22 +63,72 @@
     <!-- Other news content -->
     <section class="other-news-grid">
       <article class="other-news other-news-1">
-        <img class="other-news-image" src="images/other-news-image-1.jpg" alt="person writing in a notepad" />
+        <img class="other-news-image" src="/images/other-news-image-1.jpg" alt="person writing in a notepad" />
 
         <div class="other-news-textbox">
           <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
           <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more...</a>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
         </div>
       </article>
+      <article class="other-news other-news-2">
+        <img class="other-news-image" src="/images/other-news-image-2.jpg" alt="person getting make up put on" />
 
-      <article class="other-news other-news-2">2</article>
-      <article class="other-news other-news-3">3</article>
-      <article class="other-news other-news-4">4</article>
-      <article class="other-news other-news-5">5</article>
-      <article class="other-news other-news-6">6</article>
-      <article class="other-news other-news-7">7</article>
-      <article class="other-news other-news-8">8</article>
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-3">
+        <img class="other-news-image" src="/images/other-news-image-3.jpg" alt="pizza baker making pizza" />
+
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-4">
+        <img class="other-news-image" src="/images/other-news-image-4.jpg" alt="barista pouring milk into a cup of coffee making latte art" />
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-5">
+        <img class="other-news-image" src="/images/other-news-image-5.jpg" alt="person sitting behind a big pile of books" />
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-6">
+        <img class="other-news-image" src="/images/other-news-image-6.jpg" alt="person beading necklaces" />
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-7">
+        <img class="other-news-image" src="/images/other-news-image-7.jpg" alt="two people behind a sewing machine" />
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
+      <article class="other-news other-news-8">
+        <img class="other-news-image" src="/images/other-news-image-8.jpg" alt="two people talking with a microphone between them" />
+        <div class="other-news-textbox">
+          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
+          <p class="other-news-text">consectetur adipiscing elit.</p>
+          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+        </div>
+      </article>
     </section>
   </body>
 </html>
