styles in progress

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
         <p class="title-sub">FAN NETWORK</p>
       </div>
 
-      <nav class="nav__page">
+      <nav class="nav-page">
         <a href="#News" class="nav-page-link">News</a>
         <a href="#Merchandise" class="nav-page-link">Merchandise</a>
         <a href="#Information" class="nav-page-link">Information</a>
