--- a/code/index.html
+++ b/code/index.html
@@ -41,17 +41,11 @@
     <!-- The big news content -->
     <section class="big-news">
       <div class="big-news-imagebox">
-        <img
-          class="big-news-image"
-          src="/images/big-news-image.jpg" alt=""
-        />
+        <img class="big-news-image" src="/images/big-news-image.jpg" alt="" />
       </div>
 
       <div class="big-news-text">
-        <h1 class="big-news-heading">
-          How to Quit Your Day Job and Focus 
-        </h1>
-        <h1 class="big-news-heading">on Lorem Ipsum</h1>
+        <h1 class="big-news-heading">How to Quit Your Day Job and Focus on Lorem Ipsum</h1>
         <p class="big-news-p">
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
           officia deserunt mollit anim id est laborum.
@@ -60,73 +54,115 @@
       </div>
     </section>
 
+    <hr style="margin:auto;width:95%;border:1px solid rgb(255, 94, 0);">
+
     <!-- Other news content -->
     <section class="other-news-grid">
       <article class="other-news other-news-1">
-        <img class="other-news-image" src="/images/other-news-image-1.jpg" alt="person writing in a notepad" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-1.jpg"
+          alt="person writing in a notepad"
+        />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Experts: Working from home </p>
+          <p class="other-news-text">will not set you free</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-2">
-        <img class="other-news-image" src="/images/other-news-image-2.jpg" alt="person getting make up put on" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-2.jpg"
+          alt="person getting make up put on"
+        />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Make-up and long hair, makes for</p>
+          <p class="other-news-text">break up and don't care</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-3">
-        <img class="other-news-image" src="/images/other-news-image-3.jpg" alt="pizza baker making pizza" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-3.jpg"
+          alt="pizza baker making pizza"
+        />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Italian langos are apparently</p>
+          <p class="other-news-text">here to stay</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-4">
-        <img class="other-news-image" src="/images/other-news-image-4.jpg" alt="barista pouring milk into a cup of coffee making latte art" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-4.jpg"
+          alt="barista pouring milk into a cup of coffee making latte art"
+        />
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Baristas opening up hospital,</p>
+          <p class="other-news-text">claiming coffee can cure parkinson</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-5">
-        <img class="other-news-image" src="/images/other-news-image-5.jpg" alt="person sitting behind a big pile of books" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-5.jpg"
+          alt="person sitting behind a big pile of books"
+        />
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Man Lost for Words But will</p>
+          <p class="other-news-text">NOT stop searching</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-6">
-        <img class="other-news-image" src="/images/other-news-image-6.jpg" alt="person beading necklaces" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-6.jpg"
+          alt="person beading necklaces"
+        />
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Necklace beading protests</p>
+          <p class="other-news-text">against climate change</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-7">
-        <img class="other-news-image" src="/images/other-news-image-7.jpg" alt="two people behind a sewing machine" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-7.jpg"
+          alt="two people behind a sewing machine"
+        />
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">Sew your own mouse pad –</p>
+          <p class="other-news-text">a step by step guide</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
       <article class="other-news other-news-8">
-        <img class="other-news-image" src="/images/other-news-image-8.jpg" alt="two people talking with a microphone between them" />
+        <img
+          class="other-news-image"
+          src="/images/other-news-image-8.jpg"
+          alt="two people talking with a microphone between them"
+        />
         <div class="other-news-textbox">
-          <p class="other-news-text">Lorem ipsum dolor sit amet,</p>
-          <p class="other-news-text">consectetur adipiscing elit.</p>
-          <a class="other-news-link" href="#">Read more</a> <span style="color:purple;letter-spacing:.2rem;">•••</span>
+          <p class="other-news-text">New episode of our podcast</p>
+          <p class="other-news-text">"Once in a Blue Moon" out now</p>
+          <a class="other-news-link" href="#">Read more</a>
+          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
       </article>
     </section>
