--- a/code/index.html
+++ b/code/index.html
@@ -16,11 +16,13 @@
     <!-- Some kind of logo and navbar -->
     <header class="navbar">
       <div class="navbar-logo">
-        <img
+        <!-- <img
           class="navbar-logo-icon"
           src="https://img.icons8.com/color/48/000000/moon-satellite.png"
           alt="The Moon logo icon"
-        />
+        /> -->
+        <div class="moon-logo">
+        </div>
         <h1 class="navbar-logo-text">The Moon</h1>
       </div>
 
