--- a/code/index.html
+++ b/code/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8" />
     <title>Project: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <div class="title">
-        <h1 class="title-h1"><span>Sailor Moon</span> news sourse </h1>
+        <h1 class="title-h1"><span>Sailor Moon</span></h1>
         <p class="title-sub">FAN NETWORK</p>
       </div>
 
