--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Bambino - The latest news about babies</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+    <h1 class="top-heading">Bambino</h1>
     </header>
 
-    <section class="big-news">
+    <section class="big-news">Stor nyhet
+      <p>Här är mkt text om den stora nyheten</p>
+      <img src="Alissa.jpg"
+ 
       <!-- The big news content -->
     </section>
-
-    <section class="">
+    <section class="other-news">
+      <h1 class="other-news">Mindre nyheter</h1>
       <!-- The other news  -->
     </section>
   </body>
