--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,8 @@
       <!-- The big news content -->
     </section>
     <section class="other-news">
-      <h1 class="other-news">Mindre nyheter</h1>
+      <h1>Små nyheter</h1>
+      <p>Här kommer det vara mindre nyheter</p>
       <!-- The other news  -->
     </section>
   </body>
