small changes to padding/margins

--- a/code/index.html
+++ b/code/index.html
@@ -68,8 +68,8 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Experts: Working from home </p>
-          <p class="other-news-text">will not set you free</p>
+          <p class="other-news-text">Experts: Working from home will not set you free</p>
+          
           <a class="other-news-link" href="#">Read more</a>
           <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
         </div>
