index.html and styles were moved to root.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <article class="grid">
      <section class="grid-col-2">
       <div class="grid-item-lg">
-        <img src="../moon.cafe.jpg" class="grid-item-img" alt="moon-cafe">
+        <img src="./moon.cafe.jpg" class="grid-item-img" alt="moon-cafe">
         <p class="grid-item-category">News</p>
         <h4 class="grid-item-title">Sailor Moon Crystal Shop & Cafe (Taiwan)</h4>
         <p class="grid-item-author">By Fan Network</p>
@@ -42,7 +42,7 @@
             <p class="grid-item-author">By Fan Network</p>
           </div>
           <div>
-            <img src="../movie.moon.jpg" class="grid-item-img" alt="moon-movie">
+            <img src="./movie.moon.jpg" class="grid-item-img" alt="moon-movie">
           </div>
         </div>
 
@@ -53,7 +53,7 @@
           <p class="grid-item-author">By Fan Network</p>
           </div>
           <div>
-          <img src="../moon-30.jpeg" class="grid-item-img" alt="moon-30th">
+          <img src="./moon-30.jpeg" class="grid-item-img" alt="moon-30th">
           </div>
         </div>
 
@@ -70,21 +70,21 @@
      <h3 class="grid-col-title">Things you need to know and have!</h3>
      <section class="grid-col-3">
       <div class="grid-item-md">
-        <img src="../moon.store.jpg" class="grid-item-img" alt="moon-store">
+        <img src="./moon.store.jpg" class="grid-item-img" alt="moon-store">
         <p class="grid-item-category">Merchandise</p>
           <h4 class="grid-item-title">New Sailor Moon Store Petit in Osaka, Japan! 🎀🌙</h4>
           <p class="grid-item-author">By Fan Network</p>
       </div>
       
       <div class="grid-item-md">
-        <img src="../moon-character.jpg" class="grid-item-img" alt="moon-character">
+        <img src="./moon-character.jpg" class="grid-item-img" alt="moon-character">
         <p class="grid-item-category">Which Sailor Are You?</p>
           <h4 class="grid-item-title">Are you an outgoing person like Sailor Moon? Or are you smart like Sailor Mercury?</h4>
           <p class="grid-item-author">By Fan Network</p>
       </div>
       
       <div class="grid-item-md">
-        <img src="../moon.backpack.jpg" class="grid-item-img" alt="moon-backpack">
+        <img src="./moon.backpack.jpg" class="grid-item-img" alt="moon-backpack">
         <p class="grid-item-category">Merchandise</p>
           <h4 class="grid-item-title">BoxLunch: Sailor Guardians and Black Moon Clan Reversible Mini Backpack</h4>
           <p class="grid-item-author">By Fan Network</p>
