--- a/code/index.html
+++ b/code/index.html
@@ -16,13 +16,7 @@
     <!-- Some kind of logo and navbar -->
     <header class="navbar">
       <div class="navbar-logo">
-        <!-- <img
-          class="navbar-logo-icon"
-          src="https://img.icons8.com/color/48/000000/moon-satellite.png"
-          alt="The Moon logo icon"
-        /> -->
-        <div class="moon-logo">
-        </div>
+        <div class="moon-logo"></div>
         <h1 class="navbar-logo-text">The Moon</h1>
       </div>
 
@@ -43,11 +37,17 @@
     <!-- The big news content -->
     <section class="big-news">
       <div class="big-news-imagebox">
-        <img class="big-news-image" src="/images/big-news-image.jpg" alt="" />
+        <img
+          class="big-news-image"
+          src="/images/big-news-image.jpg"
+          alt="person buying fruit and vegetables"
+        />
       </div>
 
       <div class="big-news-text">
-        <h1 class="big-news-heading">How to Quit Your Day Job and Focus on Lorem Ipsum</h1>
+        <h1 class="big-news-heading">
+          How to Quit Your Day Job and Focus on Lorem Ipsum
+        </h1>
         <p class="big-news-p">
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
           officia deserunt mollit anim id est laborum.
@@ -56,7 +56,7 @@
       </div>
     </section>
 
-    <hr style="margin:auto;width:95%;border:1px solid rgb(255, 94, 0);">
+    <hr class="divider" />
 
     <!-- Other news content -->
     <section class="other-news-grid">
@@ -68,10 +68,13 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Experts: Working from home will not set you free</p>
-          
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Experts: Working from home will not set you free
+          </p>
+
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-2">
@@ -82,10 +85,12 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Make-up and long hair, makes for</p>
-          <p class="other-news-text">break up and don't care</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Make-up and long hair, makes for break up and don't care
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-3">
@@ -96,10 +101,12 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">Italian langos are apparently</p>
-          <p class="other-news-text">here to stay</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Italian langos are apparently here to stay
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-4">
@@ -109,10 +116,12 @@
           alt="barista pouring milk into a cup of coffee making latte art"
         />
         <div class="other-news-textbox">
-          <p class="other-news-text">Baristas opening up hospital,</p>
-          <p class="other-news-text">claiming coffee can cure parkinson</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Baristas opening up hospital, claiming coffee can cure parkinson
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-5">
@@ -122,10 +131,12 @@
           alt="person sitting behind a big pile of books"
         />
         <div class="other-news-textbox">
-          <p class="other-news-text">Man Lost for Words But will</p>
-          <p class="other-news-text">NOT stop searching</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Man Lost for Words But will NOT stop searching
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-6">
@@ -135,10 +146,12 @@
           alt="person beading necklaces"
         />
         <div class="other-news-textbox">
-          <p class="other-news-text">Necklace beading protests</p>
-          <p class="other-news-text">against climate change</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Necklace beading protests gainst climate change
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-7">
@@ -148,10 +161,12 @@
           alt="two people behind a sewing machine"
         />
         <div class="other-news-textbox">
-          <p class="other-news-text">Sew your own mouse pad –</p>
-          <p class="other-news-text">a step by step guide</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            Sew your own mouse pad – a step by step guide
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
       <article class="other-news other-news-8">
@@ -161,10 +176,12 @@
           alt="two people talking with a microphone between them"
         />
         <div class="other-news-textbox">
-          <p class="other-news-text">New episode of our podcast</p>
-          <p class="other-news-text">"Once in a Blue Moon" out now</p>
-          <a class="other-news-link" href="#">Read more</a>
-          <span style="color: rgb(255, 94, 0); letter-spacing: 0.2rem">•••</span>
+          <p class="other-news-text">
+            New episode of our podcast "Once in a Blue Moon" out now
+          </p>
+          <a class="other-news-link" href="#"
+            >Read more<span class="other-news-dots">•••</span></a
+          >
         </div>
       </article>
     </section>
