--- a/code/index.html
+++ b/code/index.html
@@ -12,16 +12,50 @@
     <h1 class="top-heading">Bambino</h1>
     </header>
 
-    <section class="big-news">Stor nyhet
+    <section class="big-news">
+      <article>
+        <h1>Hej</h1>
       <p>Här är mkt text om den stora nyheten</p>
-      <img src="Alissa.jpg"
+      <img src="Pictures/foxbook.jpg" alt="an image"/>
+      <a class="button" display="button" href="www.google.com">Read more</a>
+    </article>
+      
  
       <!-- The big news content -->
     </section>
     <section class="other-news">
       <h1>Små nyheter</h1>
       <p>Här kommer det vara mindre nyheter</p>
+      <img src="Pictures/reading.jpg"alt="an image"/>
+      <a class="button" display="button" href="www.google.com">Read more</a>
       <!-- The other news  -->
     </section>
+
+    <section class="other-news">
+  
+      <h1>Små nyheter</h1>
+      <p>Här kommer det vara mindre nyheter</p>
+      <img src="Pictures/singer.jpg"alt="an image"/>
+      <a class="button" display="button" href="www.google.com">Read more</a>
+  
+      <!-- The other news  -->
+    </section>
+
+    <section class="other-news">
+      <h1>Små nyheter</h1>
+      <p>Här kommer det vara mindre nyheter</p>
+      <img src="Pictures/sunset.jpg"alt="an image"/>
+      <a class="button" display="button" href="www.google.com">Read more</a>
+      <!-- The other news  -->
+    </section>
+
+    <section class="other-news">
+      <h1>Små nyheter</h1>
+      <p>Här kommer det vara mindre nyheter</p>
+      <img src="Pictures/writing.jpg"alt="an image"/>
+      <a class="button" display="button" href="www.google.com">Read more</a>
+      <!-- The other news  -->
+    </section>
+    
   </body>
 </html>
