continued styling, dried down the css and changed color scheme

--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,7 @@
       </nav>
 
       <nav class="navbar-menu">
-        <a class="navbar-menu-links active" href="#">News</a>
+        <a class="navbar-menu-links" href="#">News</a>
         <a class="navbar-menu-links" href="#">Tech</a>
         <a class="navbar-menu-links" href="#">Media</a>
         <a class="navbar-menu-links" href="#">Contact</a>
@@ -44,7 +44,7 @@
         />
       </div>
 
-      <div class="big-news-text">
+      <div class="big-news-textbox">
         <h1 class="big-news-heading">
           How to Quit Your Day Job and Focus on Lorem Ipsum
         </h1>
@@ -69,7 +69,7 @@
 
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Experts: Working from home will not set you free
+            The Future According to Lorem Ipsum Experts
           </p>
 
           <a class="other-news-link" href="#"
@@ -86,7 +86,7 @@
 
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Make-up and long hair, makes for break up and don't care
+            5 Sins of Lorem Ipsum and How to Avoid Them
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -102,7 +102,7 @@
 
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Italian langos are apparently here to stay
+            How Lorem Ipsum Will Affect Your Retirement
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -117,7 +117,7 @@
         />
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Baristas opening up hospital, claiming coffee can cure parkinson
+            What Your Relationship With Lorem Ipsum Says About You
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -132,7 +132,7 @@
         />
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Man Lost for Words But will NOT stop searching
+            How to Achieve Your Lorem Ipsum Goals in 2023
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -147,7 +147,7 @@
         />
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Necklace beading protests gainst climate change
+            8 Dumb Mistakes That’ll Tank Your Lorem Ipsum Business
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -162,7 +162,7 @@
         />
         <div class="other-news-textbox">
           <p class="other-news-text">
-            Sew your own mouse pad – a step by step guide
+            The Future of Lorem Ipsum, According to an Expert
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
@@ -177,7 +177,7 @@
         />
         <div class="other-news-textbox">
           <p class="other-news-text">
-            New episode of our podcast "Once in a Blue Moon" out now
+            Meet the Incredible, Unsung Heros of Lorem Ipsum
           </p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
