removed some css classes that was not being used

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
@@ -60,7 +60,7 @@
 
     <!-- Other news content -->
     <section class="other-news-grid">
-      <article class="other-news other-news-1">
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-1.jpg"
@@ -68,16 +68,14 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            The Future According to Lorem Ipsum Experts
-          </p>
-
+          <p>The Future According to Lorem Ipsum Experts</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-2">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-2.jpg"
@@ -85,15 +83,14 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            5 Sins of Lorem Ipsum and How to Avoid Them
-          </p>
+          <p>5 Sins of Lorem Ipsum and How to Avoid Them</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-3">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-3.jpg"
@@ -101,84 +98,82 @@
         />
 
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            How Lorem Ipsum Will Affect Your Retirement
-          </p>
+          <p>How Lorem Ipsum Will Affect Your Retirement</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-4">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-4.jpg"
           alt="barista pouring milk into a cup of coffee making latte art"
         />
+
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            What Your Relationship With Lorem Ipsum Says About You
-          </p>
+          <p>What Your Relationship With Lorem Ipsum Says About You</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-5">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-5.jpg"
           alt="person sitting behind a big pile of books"
         />
+
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            How to Achieve Your Lorem Ipsum Goals in 2023
-          </p>
+          <p>How to Achieve Your Lorem Ipsum Goals in 2023</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-6">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-6.jpg"
           alt="person beading necklaces"
         />
+
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            8 Dumb Mistakes That’ll Tank Your Lorem Ipsum Business
-          </p>
+          <p>8 Dumb Mistakes That’ll Tank Your Lorem Ipsum Business</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-7">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-7.jpg"
           alt="two people behind a sewing machine"
         />
+
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            The Future of Lorem Ipsum, According to an Expert
-          </p>
+          <p>The Future of Lorem Ipsum, According to an Expert</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
         </div>
       </article>
-      <article class="other-news other-news-8">
+
+      <article class="other-news">
         <img
           class="other-news-image"
           src="/images/other-news-image-8.jpg"
           alt="two people talking with a microphone between them"
         />
+
         <div class="other-news-textbox">
-          <p class="other-news-text">
-            Meet the Incredible, Unsung Heros of Lorem Ipsum
-          </p>
+          <p>Meet the Incredible, Unsung Heros of Lorem Ipsum</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
