changed the navbar for tablet

--- a/code/index.html
+++ b/code/index.html
@@ -29,6 +29,7 @@
       <nav class="navbar-menu">
         <a class="navbar-menu-links" href="#">News</a>
         <a class="navbar-menu-links" href="#">Tech</a>
+        <div class="moon-logo tablet-logo-centered"></div>
         <a class="navbar-menu-links" href="#">Media</a>
         <a class="navbar-menu-links" href="#">Contact</a>
       </nav>
