--- a/code/index.html
+++ b/code/index.html
@@ -69,7 +69,7 @@
         />
 
         <div class="other-news-textbox">
-          <p>The Future According to Lorem Ipsum Experts</p>
+          <p>I Cut Lorem Ipsum Out of My Life. Here’s What Happened</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
@@ -84,7 +84,7 @@
         />
 
         <div class="other-news-textbox">
-          <p>5 Sins of Lorem Ipsum and How to Avoid Them</p>
+          <p>The Quickest Way to Get Rich With Lorem Ipsum</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
@@ -99,7 +99,7 @@
         />
 
         <div class="other-news-textbox">
-          <p>How Lorem Ipsum Will Affect Your Retirement</p>
+          <p>Lorem Ipsum on a Budget? It's Not as Hard as You Think</p>
           <a class="other-news-link" href="#"
             >Read more<span class="other-news-dots">•••</span></a
           >
