moved the images folder

--- a/code/index.html
+++ b/code/index.html
@@ -40,7 +40,7 @@
       <div class="big-news-imagebox">
         <img
           class="big-news-image"
-          src="/images/big-news-image.jpg"
+          src="images/big-news-image.jpg"
           alt="person buying fruit and vegetables"
         />
       </div>
@@ -64,7 +64,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-1.jpg"
+          src="images/other-news-image-1.jpg"
           alt="person writing in a notepad"
         />
 
@@ -79,7 +79,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-2.jpg"
+          src="images/other-news-image-2.jpg"
           alt="person getting make up put on"
         />
 
@@ -94,7 +94,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-3.jpg"
+          src="images/other-news-image-3.jpg"
           alt="pizza baker making pizza"
         />
 
@@ -109,7 +109,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-4.jpg"
+          src="images/other-news-image-4.jpg"
           alt="barista pouring milk into a cup of coffee making latte art"
         />
 
@@ -124,7 +124,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-5.jpg"
+          src="images/other-news-image-5.jpg"
           alt="person sitting behind a big pile of books"
         />
 
@@ -139,7 +139,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-6.jpg"
+          src="images/other-news-image-6.jpg"
           alt="person beading necklaces"
         />
 
@@ -154,7 +154,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-7.jpg"
+          src="images/other-news-image-7.jpg"
           alt="two people behind a sewing machine"
         />
 
@@ -169,7 +169,7 @@
       <article class="other-news">
         <img
           class="other-news-image"
-          src="/images/other-news-image-8.jpg"
+          src="images/other-news-image-8.jpg"
           alt="two people talking with a microphone between them"
         />
 
