--- a/code/index.html
+++ b/code/index.html
@@ -9,14 +9,79 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+        <img src="tree.png" alt="Logo">
+        <h1>National park news</h1>
+        <nav>
+          <a href="index.html" class="active">Home</a>
+          <a href="#">Parks</a>
+          <a href="#">Camper</a>
+          <a href="#">Contact</a>
+         </nav> 
+
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="flex-child">
+        <img src="yellowstone.jpg" alt="yellowstone">
+      </div>
+      <div class="flex-child news-button">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque expedita fugiat laboriosam, eligendi reprehenderit voluptatum eveniet. Repellendus ducimus unde, nisi obcaecati iusto debitis voluptate quibusdam! Dicta nam delectus voluptatem rem.</p>
+        <button>Read more</button>
+      </div>
     </section>
 
-    <section class="">
+    <section class="news-grid">
       <!-- The other news  -->
+      <div class="news-grid-child">
+        <img src="buffalo.jpg" alt="A buffalo">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="smoke.jpg" alt="smoke">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="grand-canyon.jpg" alt="Grand Canyon">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="yosemite-clouds.jpg" alt="Cloudy Yosemite">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
+      <div class="news-grid-child">
+        <img src="" alt="">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolor itaque nisi! Officia minima esse ea facere adipisci odit iste voluptas aliquam, labore quaerat velit tempora illo ullam saepe magnam?</p>
+      </div>
     </section>
+
   </body>
 </html>
