--- a/code/index.html
+++ b/code/index.html
@@ -2,12 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+    <title>Project 1: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+     <section class="container">
+        <div class="grid-item item1">1.</div>
+        <div class="grid-item item2">2.</div>
+        <div class="grid-item item3">3.</div>
+        <div class="grid-item item4">4.</div>
+        <div class="grid-item item5">5.</div>
+        <div class="grid-item item6">6.</div>
+        <div class="grid-item item7">7.</div>
+        <div class="grid-item item8">8.</div>
+        <div class="grid-item item9">9.</div>
+      </section>
+      <!-- 
+        <div class="grid-item nav-bar">nav bar</div>
+        <div class="grid-item big-news-image">big news image</div>
+        <div class="grid-item big-news-text">big news text</div>
+        <div class="grid-item news one">news 1</div>
+        <div class="grid-item news two">news 2</div>
+        <div class="grid-item news three">news 3</div>
+        <div class="grid-item news four">news 4</div>          
+      </section>-->
+
       <!-- Some kind of logo and navbar -->
     </header>
 
@@ -15,7 +38,7 @@
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
     </section>
   </body>
