--- a/code/index.html
+++ b/code/index.html
@@ -9,9 +9,21 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-     <section class="container">
-        <div class="grid-item item1">1.</div>
+    <header class="navigation">
+      <div class="nav-grid">
+        <div class="nav-item logo">logo</div>
+        <div class="nav-item site-name">rock</div>
+        <div class="nav-item links">links</div>
+          <div class="nav-item link1">link1</div>
+          <div class="nav-item link2">link2</div>
+          <div class="nav-item link3">link3</div>
+        </div>
+      </div>
+    </header>
+
+      </section>
+     <!-- 
+      <section class="">
         <div class="grid-item item2">2.</div>
         <div class="grid-item item3">3.</div>
         <div class="grid-item item4">4.</div>
@@ -21,7 +33,7 @@
         <div class="grid-item item8">8.</div>
         <div class="grid-item item9">9.</div>
       </section>
-      <!-- 
+    
         <div class="grid-item nav-bar">nav bar</div>
         <div class="grid-item big-news-image">big news image</div>
         <div class="grid-item big-news-text">big news text</div>
@@ -32,7 +44,7 @@
       </section>-->
 
       <!-- Some kind of logo and navbar -->
-    </header>
+
 
     <section class="big-news">
       <!-- The big news content -->
