--- a/code/index.html
+++ b/code/index.html
@@ -9,39 +9,50 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header class="navigation">
-      <div class="nav-grid">
-        <div class="nav-item logo">logo</div>
-        <div class="nav-item site-name">rock</div>
-        <div class="nav-item links">links</div>
-          <div class="nav-item link1">link1</div>
-          <div class="nav-item link2">link2</div>
-          <div class="nav-item link3">link3</div>
+    <nav class="nav-container">
+      <div class="logo">LOGO</div>
+      <div class="burger-icon">Menu</div>
+      <ul class="nav-items main-nav mobile-hide">
+        <li class="list-item"><a href="#">Home</a></li>
+        <li class="list-item"><a href="#">Articles</a></li>
+        <li class="list-item"><a href="#">Inspiration</a></li>
+        <li class="list-item"><a href="#">Videos</a></li>
+      </ul>
+    </nav>
+
+    <div class="main-container">
+      <div class="container">
+        <div class="featured-container">
+          <div class="main-article">
+            <h1>Featured this week</h1>
+            <img src="xxxx" alt="featured image">
+            <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+          </div>
+        </div>
+        <div class="sub-container">
+          <div class="sub-featured">
+            <div class="sub1">
+              <h3>text</h3>
+              <img src="xx" alt="img1">
+            </div>
+            <div class="sub2">
+              <h3>text</h3>
+              <img src="xx" alt="img2">
+            </div>
+            <div class="sub3">
+              <h3>text</h3>
+              <img src="xx" alt="img3">
+            </div>
+            <div class="sub4">
+              <h3>text</h3>
+              <img src="xx" alt="img4">
+            </div>
+          </div>
         </div>
       </div>
-    </header>
+    </div>
 
       </section>
-     <!-- 
-      <section class="">
-        <div class="grid-item item2">2.</div>
-        <div class="grid-item item3">3.</div>
-        <div class="grid-item item4">4.</div>
-        <div class="grid-item item5">5.</div>
-        <div class="grid-item item6">6.</div>
-        <div class="grid-item item7">7.</div>
-        <div class="grid-item item8">8.</div>
-        <div class="grid-item item9">9.</div>
-      </section>
-    
-        <div class="grid-item nav-bar">nav bar</div>
-        <div class="grid-item big-news-image">big news image</div>
-        <div class="grid-item big-news-text">big news text</div>
-        <div class="grid-item news one">news 1</div>
-        <div class="grid-item news two">news 2</div>
-        <div class="grid-item news three">news 3</div>
-        <div class="grid-item news four">news 4</div>          
-      </section>-->
 
       <!-- Some kind of logo and navbar -->
 
