--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,15 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="navbar">
+        <img src="logo.JPG" alt="newspapers-logo">
+    <ul>
+        <li><a href="default.asp">Home</a></li>
+        <li><a href="news.asp">News</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+    </ul>
+    </div>
     </header>
 
     <section class="big-news">
@@ -18,5 +27,48 @@
     <section class="">
       <!-- The other news  -->
     </section>
+    <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  <div class="grey-box">
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
+  </div>
+  
+</body>
+</html>
   </body>
 </html>
