--- a/code/index.html
+++ b/code/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+    <!-- <header> -->
       <!-- Some kind of logo and navbar -->
+    <!--
+
       <div class="navbar">
         <img src="logo.JPG" alt="newspapers-logo">
     <ul>
@@ -18,57 +23,68 @@
         <li><a href="about.asp">About</a></li>
     </ul>
     </div>
-    </header>
+    </header> -->
+
+    <!-- <h1>Hello world!</h1> -->
 
     <section class="big-news">
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="grey-box">
       <!-- The other news  -->
+      <h2>Trending gossips 🔥</h2>
+      <p>Hello everybody! Welcome to these exciting news!</p>
+      <img src="129.jpg" alt="a picture of a dog"/>
     </section>
-    <div class="grey-box">
+    
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
+    </section>
+
+    <section class="grey-box">
+      <!-- The other news  -->
       <h2>Trending gossips 🔥</h2>
       <p>Hello everybody! Welcome to these exciting news!</p>
       <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  <div class="grey-box">
-      <h2>Trending gossips 🔥</h2>
-      <p>Hello everybody! Welcome to these exciting news!</p>
-      <img src="129.jpg" alt="a picture of a dog"/>
-  </div>
-  
+    </section>
 </body>
-</html>
-  </body>
-</html>
+
